<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.tienda.crear_tienda">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Mis negocios"
        android:textSize="25sp"
        android:textStyle="bold" />





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_transaparente"
        android:layout_weight="1"
        android:layout_height="45dp"


        >

        <EditText
            android:id="@+id/nombre_negocio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:layout_marginTop="5dp"

            android:hint="Nombre de tu Negocio"
            android:textSize="18sp"

            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#CCCCCC" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Identificacion del Dueño"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_transaparente"
        android:layout_weight="1"
        android:layout_height="45dp"


        >

        <EditText
            android:id="@+id/cedula_registro"

            android:background="@null"
            android:gravity="center"
            android:hint="Cedula"
            android:textSize="18sp"

            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:textAlignment="center"
            android:textColorHint="#CCCCCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:paddingTop="0dp"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contacto del Negocio"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_defaultNameCode="EC"
            android:gravity="center"
            android:layout_gravity="center"

            app:ccp_defaultCode="593"
            app:ccp_countryPreference="US,EC,ME,CO,PE"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefono_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:hint="Telefono"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHint="@color/colorSecondaryText"

                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <TextView
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Foto de Portada"
        android:textSize="20sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="10dp"
        >
        <ImageView

            android:id="@+id/portada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            ></ImageView>


    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_marginLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Foto de Perfil"
        android:textSize="20sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/perfil"
        android:layout_gravity="center"
        android:layout_width="125dp"
        android:layout_height="125dp"
        >



    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_marginLeft="2dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ubicacion del Negocio"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_ubicacion_registro"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_transaparente"
        android:layout_marginTop="2dp"

        >

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit_location_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Ubicame"
                    android:textColor="@color/col_Black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mensaje_ubicacion"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_dirección"
            android:visibility="gone"
            android:background="@drawable/border_transaparente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/miubicacion">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/presentacion_dirección"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cambio_direccion"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icono_ajuste">

            </de.hdodenhof.circleimageview.CircleImageView>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_marginLeft="2dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Presentación"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/descripcion_tienda_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="Describe tu Negocio para que los demas sepan de ti "
            android:maxLines="5"
            android:lines="3"
            android:minLines="1"
            android:imeActionId="6"
            android:maxLength="120"


            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/col_gris"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de Negocio"
            android:textSize="20sp"
            android:textStyle="bold" />


        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/soporte_tipo"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/soporte"
            app:civ_border_color="@color/col_gris"
            app:civ_border_width="0.5dp"
            >


        </de.hdodenhof.circleimageview.CircleImageView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/categoria"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spn_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            ></Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/sub_categorias"
    />

        <Spinner
            android:id="@+id/spn_subCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            ></Spinner>
    </LinearLayout>

    <TextView
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Horario del Negocio"
        android:textSize="20sp"
        android:textStyle="bold" />





    <include
        layout="@layout/items_horarios"
        ></include>



</LinearLayout>







</ScrollView>